# rkk-bot

./: pyproject.toml
src/: main.py
src/conversation/: __init__.py  report_conversation.py  start_conversation.py
src/decorator/: command_handler.py  conversation_handler.py  message_handler.py  registered.py  text_handler.py
src/handler/: __init__.py  data.py
src/utils/: bot.py
